--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#B97CF7">
-    <meta name="description" content="Rupendra Singh Rajawat | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
+    <meta name="description" content="Victor Rono | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
     <meta name="keywords" content="Rupendra Singh Rajawat, Rupendra Singh Rajawat portfolio, rupendra20 Portfolio, rupendra, rupendra singh github,rupendra20 github, rupendra singh rajawat me,rupendrasingh , rajawat, rupendra uiverse, rupendra frontend developer, frontend developer, rupendra jaipur,  rupendra singh rajawat jaipur, Model,rupendra,rajawat,rupendra singh rajawat model" >
     <meta name="author" content="Rupendra Singh" >
     <meta property="og:image" content="https://rupendra20.github.io/Portfolio/images/joo.jpg">
@@ -389,7 +389,7 @@
         <div class="footer-bottom">
         <div class="footer-text">
             
-            <p>Design and built by Rupendra Singh &copy; twinty twinty four | All Rights Reserved.</p>
+            <p>Design and built by Victor Rono &copy; twinty twinty four | All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#"><img class="rocketIcon" src="./images/rocket.png" alt="BackToTop"></a>
