--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="author" content="Rupendra Singh" >
     <meta property="og:image" content="https://rupendra20.github.io/Portfolio/images/joo.jpg">
     <link rel="shortcut icon" type="x-icon" href="RSR-LOGO-PNG.png">
-    <title>Rupendra Singh | Portfolio </title>
+    <title>Victor Rono | Portfolio </title>
     <link rel="stylesheet" href="css/style.css">
     <!-- box icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -60,7 +60,7 @@
         <div class="home-content">
             <h1><span class="kello">Hi,I'am</span> <span class="gradient-animation">Rupendra Singh</span> <span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
-                <h3>Investment Banker</h3>
+                <h3>ICT Support and Network Administration</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
             <p> "Hey there! I'm a certified investment banker who specializes in back-office operations. I also have a strong background in IT, which helps me use technology effectively to enhance financial strategies. Take a look around to see how I can help with your financial goals.
@@ -389,7 +389,7 @@
         <div class="footer-bottom">
         <div class="footer-text">
             
-            <p>Design and built by Victor Rono &copy; twinty twinty four | All Rights Reserved.</p>
+            <p>Design and built by Victor Rono &copy; @ 2026 | All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#"><img class="rocketIcon" src="./images/rocket.png" alt="BackToTop"></a>
