--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3>ICT Support and Network Administration</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p> "Hey there! I'm a certified investment banker who specializes in back-office operations. I also have a strong background in IT, which helps me use technology effectively to enhance financial strategies. Take a look around to see how I can help with your financial goals.
+            <p> "I am a young IT undergraduate intending to continue my development as a networks and systems engineer. I am very passionate about IT coupled with a proactive attitude and finding positive ways to engage with people constructively..
 
                 "<span class="animate" style="--i:3;"></span></p>
             <div class="btn-box"><a href="mailto:ENQUIRIES4RUPENDRASINGH@GMAIL.COM" class="btn">Hire Me</a>
