--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- home section desingh -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1><span class="kello">Hi,I'am</span> <span class="gradient-animation">Rupendra Singh</span> <span class="animate" style="--i:2;"></span></h1>
+            <h1><span class="kello">Hi,I'am</span> <span class="gradient-animation">Victor Rono</span> <span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>ICT Support and Network Administration</h3>
                 <span class="animate" style="--i:3;"></span>
@@ -66,8 +66,8 @@
             <p> "I am a young IT undergraduate intending to continue my development as a networks and systems engineer. I am very passionate about IT coupled with a proactive attitude and finding positive ways to engage with people constructively..
 
                 "<span class="animate" style="--i:3;"></span></p>
-            <div class="btn-box"><a href="mailto:ENQUIRIES4RUPENDRASINGH@GMAIL.COM" class="btn">Hire Me</a>
-                <a href="RupendraResume.pdf" class="btn">MY CV</a>
+            <div class="btn-box"><a href="mailto:VICKYRONO70@GMAIL.COM" class="btn">Hire Me</a>
+                <a href="Victor Rono CV.pdf" class="btn">MY CV</a>
                 <span class="animate" style="--i:5;"></span>
                 <input type="checkbox" id="checkboxInput">
                 <label for="checkboxInput" class="toggleSwitch" onclick="playpause()">
