--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#B97CF7">
     <meta name="description" content="Victor Rono | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
-    <meta name="keywords" content="Rupendra Singh Rajawat, Rupendra Singh Rajawat portfolio, rupendra20 Portfolio, rupendra, rupendra singh github,rupendra20 github, rupendra singh rajawat me,rupendrasingh , rajawat, rupendra uiverse, rupendra frontend developer, frontend developer, rupendra jaipur,  rupendra singh rajawat jaipur, Model,rupendra,rajawat,rupendra singh rajawat model" >
-    <meta name="author" content="Rupendra Singh" >
+    <meta name="keywords" content="Victor Rono, Victor Rono portfolio, rupendra20 Portfolio, Victor, Victor Rono github,rupendra20 github, rupendra singh rajawat me,rupendrasingh , rajawat, rupendra uiverse, rupendra frontend developer, frontend developer, rupendra jaipur,  rupendra singh rajawat jaipur, Model,rupendra,rajawat,rupendra singh rajawat model" >
+    <meta name="author" content="Victor Rono" >
     <meta property="og:image" content="https://rupendra20.github.io/Portfolio/images/joo.jpg">
     <link rel="shortcut icon" type="x-icon" href="RSR-LOGO-PNG.png">
     <title>Victor Rono | Portfolio </title>
@@ -329,7 +329,7 @@
 <section class="contact" id="contact" data-aos="fade-up">
     <h2 class="heading" data-aos="fade-up" ><span class="mello">Contact </span><span class="kello"> Me</span></h2>
     
-    <form action="https://formsubmit.co/johnthejoker212@gmail.com" method="post">
+    <form action="https://formsubmit.co/vickyrono70@gmail.com" method="post">
         
         <div class="input-box">
             <div class="input-field">
