--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="keywords" content="Victor Rono, Victor Rono portfolio, rupendra20 Portfolio, Victor, Victor Rono github,rupendra20 github, rupendra singh rajawat me,rupendrasingh , rajawat, rupendra uiverse, rupendra frontend developer, frontend developer, rupendra jaipur,  rupendra singh rajawat jaipur, Model,rupendra,rajawat,rupendra singh rajawat model" >
     <meta name="author" content="Victor Rono" >
     <meta property="og:image" content="https://rupendra20.github.io/Portfolio/images/joo.jpg">
-    <link rel="shortcut icon" type="x-icon" href="RSR-LOGO-PNG.png">
+    <link rel="shortcut icon" type="x-icon" href="Vr Logo.png">
     <title>Victor Rono | Portfolio </title>
     <link rel="stylesheet" href="css/style.css">
     <!-- box icon -->
@@ -40,7 +40,7 @@
     <audio loop="" id="audioPlayer" style="display:none"><source src="sound.mp3" type="audio/mp3"></audio>
     <noscript>Allow Javascript</noscript>
     <header class="header">
-        <a href="#" class="logo"><img src="RSR-LOGO-PNG.png" alt="Nav bar logo"><span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo"><img src="Vr Logo.png" alt="Nav bar logo"><span class="animate" style="--i:1;"></span></a>
         <div class="bx bx-menu" id="menu-icon">
              <span class="animate" style="--i:2;"></span></div>
         <nav class="navbar">
@@ -58,7 +58,7 @@
     <!-- home section desingh -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1><span class="kello">Hi,I'am</span> <span class="gradient-animation">Victor Rono</span> <span class="animate" style="--i:2;"></span></h1>
+            <h1><span class="Hello">Hi,I'am</span> <span class="gradient-animation">Victor Rono</span> <span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>ICT Support and Network Administration</h3>
                 <span class="animate" style="--i:3;"></span>
@@ -102,7 +102,7 @@
              <!-- <span class="animate scroll" style="--i:1;"></span> -->
         </h2>
         <div class="about-img" data-aos="fade-up">
-            <img src="images/joo.jpg" alt="Image of Rupendra Singh Rajawat">
+            <img src="images/vic.jpg" alt="Image of Victor Rono">
             <span class="circle-spin"></span>
             <!-- <span class="animate scroll" style="--i:2;"></span> -->
         </div>
@@ -111,7 +111,7 @@
                 <!-- <span class="animate scroll" style="--i:3;"></span> -->
             </h3>
             <p>
-                "I am an aspiring investment banking professional with a strong background in financial analysis and operations. I successfully completed an Investment Banking course at Imarticus, specializing in AML/KYC compliance, derivatives, trade life cycle management, and corporate actions. I have a proven ability in financial modeling, data analysis using programming languages, and crafting compelling presentations. My strengths lie in effective communication, leadership, problem-solving, and decision-making. I am enthusiastic about leveraging my technical skills and financial expertise to excel in the investment banking industry."
+                "I am an aspiring Cyber and NetworkScurity  with a strong background in Ict Support,Network and System Administration .I have  4 year experience in ICT Field."
                 <!-- <span class="animate scroll" style="--i:4;"></span> -->
             </p>
         
