--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <!-- <span class="animate scroll" style="--i:3;"></span> -->
             </h3>
             <p>
-                "I am an aspiring Cyber and NetworkScurity  with a strong background in Ict Support,Network and System Administration .I have  4 year experience in ICT Field."
+                "I am an aspiring Cyber and NetworkScurity  with a strong background in Ict Support,Network and System Administration .I have over 4 year experience in ICT Field."
                 <!-- <span class="animate scroll" style="--i:4;"></span> -->
             </p>
         
@@ -124,36 +124,15 @@
             <div class="education-column" data-aos="fade-up">
                 <h3 class="title">Education</h3>
                 <div class="education-box" data-aos="fade-up">
-                    <div class="education-content" data-aos="fade-up">
-                        <div class="content" data-aos="fade-up">
-                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2017-2018</div>
-                            <h3>
-                                10th Grade DAV SR. Sec. School Jaipur
-                            </h3>
-                            <p>
-                                I completed my secondary education at DAV Senior Secondary School, where I developed a strong academic foundation and a passion for learning."
-                            </p>
-                        </div>
-                    </div>
-                    <div class="education-content" data-aos="fade-up">
-                        <div class="content" data-aos="fade-up">
-                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2018-2019</div>
-                            <h3>
-                                12th Grade DAV SR. Sec. School Jaipur
-                            </h3>
-                            <p>
-                                "Having laid the educational groundwork at DAV Senior Secondary School, I continued my academic journey by completing my 12th grade at the same esteemed institution. This pivotal phase further enriched my knowledge and helped shape my academic and personal growth."
-                            </p>
-                        </div>
-                    </div>
+                    
                     <div class="education-content" data-aos="fade-up">
                         <div class="content" data-aos="fade-up">
                             <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2019-2023</div>
                             <h3>
-                                Bachelors Degree-University of Maharaja College Jaipur
+                                Bachelors Degree-Rongo University
                             </h3>
                              <p>
-                                I pursued my Bachelor of Computer Applications (BCA) degree at the prestigious Maharaja College in Jaipur, where I immersed myself in the world of computer science. This journey at Maharaja College not only honed my technical skills but also provided a rich academic experience that continues to influence my career in software engineering and digital design.
+                                I am undergraduate in  Bachelor of Information Science (IT Option) degree from Rongo University, where I immersed myself in the world of computer science. This journey at Rongo not only honed my technical skills but also provided a rich academic experience that continues to influence my career in Networking administration and ICT support.
                             </p>
                         </div>
                     </div>
