--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2019-2021</div>
                             <h3>
-                                DEO (Data Entry Operator) #Parttime
+                                ICT Assistant at Europa Healthcare LTD (01/02/2022 to Date). #Fulltime
                             </h3>
                             <p>
                                 I honed my data entry skills and attention to detail during a fulfilling two-year tenure as a Data Entry Operator at Embibe Company, where I played a crucial role in maintaining data accuracy and efficiency
@@ -157,7 +157,7 @@
                         <div class="content" data-aos="fade-up">
                             <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>
-                               DEM (Data Entry Manager) #Parttime
+                               ICT Expert at Kirvam International LTD (01/02/2021 to 31/12/2021 #Parttime
                             </h3>
                             <p>
                                 With one year of experience as a Data Entry Manager, I successfully led a team of data entry operators with a strong focus on data accuracy and efficiency. My leadership skills enabled me to streamline operations and maintain high standards of data quality.
@@ -293,13 +293,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-box">
-                    <img src="images/ae.jpg" alt="">
-                    <div class="portfolio-layer">
-                        <h4>Coming Soon</h4>
-                        <p> Work in progress</p>
-                        <a href="#"><i class='bx bx-link-external' ></i></a>
-                    </div>
+               
                 </div>
             </div>
         </section>
@@ -367,7 +361,7 @@
         <div class="footer-bottom">
         <div class="footer-text">
             
-            <p>Design and built by Victor Rono &copy; @ 2026 | All Rights Reserved.</p>
+            <p>Design and built by Victor Rono &copy;2026 | All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#"><img class="rocketIcon" src="./images/rocket.png" alt="BackToTop"></a>
