--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             <!-- <span class="animate scroll" style="--i:2;"></span> -->
         </div>
         <div class="about-content" data-aos="fade-up">
-            <h3>Investment Banker ! 
+            <h3>ICT Proffessional ! 
                 <!-- <span class="animate scroll" style="--i:3;"></span> -->
             </h3>
             <p>
-                "I am an aspiring Cyber and NetworkScurity  with a strong background in Ict Support,Network and System Administration .I have over 4 year experience in ICT Field."
+                "I am an aspiring Cyber and Network Security  with a strong background in Ict Support,Network and System Administration .I have over 4 year experience in ICT Field."
                 <!-- <span class="animate scroll" style="--i:4;"></span> -->
             </p>
         
@@ -157,7 +157,7 @@
                         <div class="content" data-aos="fade-up">
                             <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>
-                               ICT Expert at Kirvam International LTD (01/02/2021 to 31/12/2021 #Parttime
+                               ICT Expert at Kirvam International LTD (01/02/2021 to 31/12/2021 #Fulltime
                             </h3>
                             <p>
                                 With one year of experience as a Data Entry Manager, I successfully led a team of data entry operators with a strong focus on data accuracy and efficiency. My leadership skills enabled me to streamline operations and maintain high standards of data quality.
