--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="education-box" data-aos="fade-up">
                     <div class="education-content" data-aos="fade-up">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2019-2021</div>
+                            <div class="year"><i class='bx bxs-calendar'></i>2022-2026</div>
                             <h3>
                                 ICT Assistant at Europa Healthcare LTD (01/02/2022 to Date). #Fulltime
                             </h3>
@@ -155,23 +155,23 @@
                     </div>
                     <div class="education-content" data-aos="fade-up">
                         <div class="content" data-aos="fade-up">
-                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2021-2022</div>
+                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2021-2021</div>
                             <h3>
                                ICT Expert at Kirvam International LTD (01/02/2021 to 31/12/2021 #Fulltime
                             </h3>
                             <p>
-                                With one year of experience as a Data Entry Manager, I successfully led a team of data entry operators with a strong focus on data accuracy and efficiency. My leadership skills enabled me to streamline operations and maintain high standards of data quality.
+                                With one year of experience as an ICT Expert, I successfully led a team of team of ict experts to provide ict services  with a strong focus on accuracy and efficiency  to intended clients. My leadership skills enabled me to streamline operations and maintain high standards of service delivery and  quality.
                             </p>
                         </div>
                     </div>
                     <div class="education-content" data-aos="fade-up">
                         <div class="content" data-aos="fade-up">
-                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2022-2023</div>
+                            <div class="year" data-aos="fade-up"><i class='bx bxs-calendar'></i>2019-2021</div>
                             <h3>
-                                Computer Hardware Technician #Parttime
+                                ICT Support Assistant at Exact-Timer ICT Solution.(23/07/2019 to 28/01/2021). #Fulltime
                             </h3>
                             <p>
-                                As a Computer Hardware Technician, I've had the privilege of providing essential maintenance and support to ensure the reliability and functionality of computer systems. My extensive experience in hardware diagnostics, repairs, and installations has allowed me to excel in this ever-evolving field."
+                                As an ICT Support Assistant, I've had the privilege of providing essential maintenance and support to ensure the reliability and functionality of computer systems. My extensive experience in hardware diagnostics, repairs, and installations has allowed me to excel in this ever-evolving field."
                             </p>
                         </div>
                     </div>
