--- a/index.html
+++ b/index.html
@@ -220,20 +220,29 @@
                     <div class="skills-content" data-aos="fade-up">
                         
                         <div class="progress" data-aos="fade-up">
-                            <h3>Web Development <span>67%</span></h3>
+                            <h3>Active Directory <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress" data-aos="fade-up">
-                            <h3>Graphic Design <span>85%</span></h3>
+                            <h3>DNS <span>85%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress" data-aos="fade-up">
-                            <h3>DSA<span>70%</span></h3>
+                            <h3>Routing and Switching<span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+						<div class="progress" data-aos="fade-up">
+                            <h3>Windows 7, 8.1 and 10 operating systems<span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
+
+                        <div class="progress" data-aos="fade-up">
+                            <h3>Microsoft Windows server 2012 R2 and Microsoft Exchange 2013 server basics. <span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
                         <div class="progress" data-aos="fade-up">
                             <h3>Hardware Proficiencient <span>73%</span></h3>
                             <div class="bar"><span></span></div>
