--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#B97CF7">
     <meta name="description" content="Victor Rono | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
-    <meta name="keywords" content="Victor Rono, Victor Rono portfolio, rupendra20 Portfolio, Victor, Victor Rono github,rupendra20 github, rupendra singh rajawat me,rupendrasingh , rajawat, rupendra uiverse, rupendra frontend developer, frontend developer, rupendra jaipur,  rupendra singh rajawat jaipur, Model,rupendra,rajawat,rupendra singh rajawat model" >
+    <meta name="keywords" content="Victor Rono, Victor Rono portfolio" >
     <meta name="author" content="Victor Rono" >
-    <meta property="og:image" content="https://rupendra20.github.io/Portfolio/images/joo.jpg">
+    <meta property="og:image" content="https://Ronovic/victorrono1.githup.io/Portfolio/images/joo.jpg">
     <link rel="shortcut icon" type="x-icon" href="Vr Logo.png">
     <title>Victor Rono | Portfolio </title>
     <link rel="stylesheet" href="css/style.css">
@@ -306,6 +306,11 @@
                 </div>
             </div>
         </section>
+		 <div class="home-sci">
+           <a href="https://github.com/Ronovic"><i class='bx bxl-github' ></i></a>
+            <a href="https://www.linkedin.com/in/vicrono/"><i class='bx bxl-linkedin'></i></a>
+            <span class="animate" style="--i:6;"></span>
+        </div>
 
         <!-- Contact section design  -->
 <section class="contact" id="contact" data-aos="fade-up">
@@ -344,6 +349,7 @@
         </div>
         <input type="hidden" name="_captcha" value="false">
     </form>
+
 </section>
 
 <!-- footer design -->
